--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+   "homepage": "https://chaseburr.github.io/",
    "name": "portfolio",
    "version": "0.1.0",
    "private": true,
    "dependencies": {
       "axios": "^0.21.1",
+      "deploy": "gh-pages -d build",
+      "gh-pages": "^3.1.0",
+      "predeploy": "npm run build",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
       "react-router-dom": "^5.2.0",
