--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
    "private": true,
    "dependencies": {
       "axios": "^0.21.1",
-      "deploy": "gh-pages -d build",
       "gh-pages": "^3.1.0",
-      "predeploy": "npm run build",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
       "react-router-dom": "^5.2.0",
@@ -17,7 +15,9 @@
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "deploy": "gh-pages -d build",
+      "predeploy": "npm run build"
    },
    "eslintConfig": {
       "extends": [
