--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "https://chaseburr.com",
+   "homepage": "http://chaseburr.com",
    "name": "portfolio",
    "version": "0.1.0",
    "private": true,
