--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
    "dependencies": {
       "axios": "^0.21.1",
       "gh-pages": "^3.1.0",
+      "particles.js": "^2.0.0",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
+      "react-particles-js": "^3.4.1",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.1"
    },
