--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-   "homepage": "https://chaseburr.com",
-   "name": "portfolio",
-   "version": "0.1.0",
-   "private": true,
-   "dependencies": {
-      "axios": "^0.21.1",
-      "gh-pages": "^3.1.0",
-      "particles.js": "^2.0.0",
-      "react": "^17.0.1",
-      "react-dom": "^17.0.1",
-      "react-particles-js": "^3.4.1",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.1"
-   },
-   "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "deploy": "gh-pages -d build",
-      "predeploy": "npm run build"
-   },
-   "eslintConfig": {
-      "extends": [
-         "react-app",
-         "react-app/jest"
-      ]
-   },
-   "browserslist": {
-      "production": [
-         ">0.2%",
-         "not dead",
-         "not op_mini all"
-      ],
-      "development": [
-         "last 1 chrome version",
-         "last 1 firefox version",
-         "last 1 safari version"
-      ]
-   }
+     "homepage": "https://chaseburr.com",
+     "name": "portfolio",
+     "version": "0.1.0",
+     "private": true,
+     "dependencies": {
+          "axios": "^0.21.1",
+          "gh-pages": "^3.1.0",
+          "gsap": "^3.6.0",
+          "particles.js": "^2.0.0",
+          "react": "^17.0.1",
+          "react-dom": "^17.0.1",
+          "react-particles-js": "^3.4.1",
+          "react-router-dom": "^5.2.0",
+          "react-scripts": "4.0.1",
+          "scrollmagic": "^2.0.8"
+     },
+     "scripts": {
+          "start": "react-scripts start",
+          "build": "react-scripts build",
+          "test": "react-scripts test",
+          "eject": "react-scripts eject",
+          "deploy": "gh-pages -d build",
+          "predeploy": "npm run build"
+     },
+     "eslintConfig": {
+          "extends": [
+               "react-app",
+               "react-app/jest"
+          ]
+     },
+     "browserslist": {
+          "production": [
+               ">0.2%",
+               "not dead",
+               "not op_mini all"
+          ],
+          "development": [
+               "last 1 chrome version",
+               "last 1 firefox version",
+               "last 1 safari version"
+          ]
+     }
 }
