--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
           "babel-loader": "^8.2.2",
           "file-loader": "^6.2.0",
           "html-webpack-plugin": "^5.0.0",
+          "mini-css-extract-plugin": "^1.4.0",
           "sass": "^1.32.6",
           "sass-loader": "^10.1.1",
           "webpack": "^5.20.2",
