--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
           "@babel/preset-env": "^7.12.13",
           "@babel/preset-react": "^7.12.13",
           "babel-loader": "^8.2.2",
+          "dotenv-webpack": "^7.0.2",
           "file-loader": "^6.2.0",
           "html-webpack-plugin": "^5.0.0",
           "mini-css-extract-plugin": "^1.4.0",
