--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
      "private": true,
      "dependencies": {
           "axios": "^0.21.1",
+          "framer": "^1.2.29",
+          "framer-motion": "^4.1.4",
           "gh-pages": "^3.1.0",
           "gsap": "^3.6.0",
           "particles.js": "^2.0.0",
